# HabbitFlow

./: .dockerignore  .gitignore  Dockerfile  README.md  Technical Specification.md  ToDo.md  apple_preview.html  deploy.sh  docker-compose.yml  history_to_restore_all_my_downloadings.txt  pyproject.toml  run_tests.sh  Архитектура уведомлений.md
CRM/twenty/: docker-compose.yml  twenty_backup.sql
backend/: .env.example
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  deps.py  email_util.py  main.py  models.py  schemas.py  security.py
backend/scripts/: seed.py
backend/tests/: __init__.py  conftest.py  test_api_endpoints.py  test_api_security.py  test_auth_registration.py  test_deadlines.py  test_notification_scheduling.py  test_notification_self_healing.py  test_notification_worker.py  test_recurrence.py
docs/: index.md
docs/api/: auth.md  habits.md  overview.md  profile_calendar_notifications.md
docs/architecture/: decisions.md  overview.md
docs/backend/: conventions.md  overview.md
docs/config/: overview.md
docs/database/: migrations.md  overview.md
docs/deployment/: overview.md
docs/design/: HABITFLOW_DESIGN_IMPLEMENTATION_SNAPSHOT.md  HABITFLOW_DESIGN_PHILOSOPHY_AND_COHESION.md
docs/errors/: overview.md
docs/flows/: auth_and_oauth.md  reminders.md  request_lifecycle.md
docs/glossary/: overview.md
docs/integrations/: crm.md
frontend/: .env.example  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
scripts/: PGADMIN_TEACHER.md  VPS_DEPLOY.md  create_teacher_readonly.sh  vps-bootstrap.sh
(+60 files in other folders)
